--- a/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
+++ b/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
@@ -310,7 +310,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1069" y="-2"/>
+            <point key="canvasLocation" x="1104" y="-77"/>
         </scene>
         <!--Greeting View Controller-->
         <scene sceneID="eq2-nQ-eca">
@@ -356,11 +356,6 @@
                                     <constraint firstItem="6iR-a2-Lhv" firstAttribute="top" secondItem="GNk-4t-UAV" secondAttribute="bottom" constant="20" id="FwN-xA-YcV"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQS-sj-9zK">
-                                <rect key="frame" x="50" y="503.5" width="220" height="34.5"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Идем дальше "/>
-                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lQy-yL-bw4">
                                 <rect key="frame" x="20" y="191.5" width="280" height="292"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -378,16 +373,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="76" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eOP-bz-4Ed">
+                                                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eOP-bz-4Ed">
                                                     <rect key="frame" x="0.0" y="0.0" width="76" height="85"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="eOP-bz-4Ed" secondAttribute="bottom" id="3FW-mf-MI8"/>
-                                                <constraint firstItem="eOP-bz-4Ed" firstAttribute="top" secondItem="XNS-do-efg" secondAttribute="top" id="EfS-yu-3Fi"/>
-                                                <constraint firstItem="eOP-bz-4Ed" firstAttribute="leading" secondItem="XNS-do-efg" secondAttribute="leading" id="WDO-wN-h96"/>
-                                                <constraint firstAttribute="trailing" secondItem="eOP-bz-4Ed" secondAttribute="trailing" id="z5Y-gR-t4a"/>
-                                            </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="76" height="85"/>
                                         <connections>
@@ -396,19 +386,24 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQS-sj-9zK">
+                                <rect key="frame" x="50" y="503.5" width="220" height="34.5"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Идем дальше "/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OYt-aF-jZJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="zQS-sj-9zK" firstAttribute="top" secondItem="lQy-yL-bw4" secondAttribute="bottom" constant="20" id="2UQ-Wt-p4X"/>
-                            <constraint firstItem="lQy-yL-bw4" firstAttribute="leading" secondItem="OYt-aF-jZJ" secondAttribute="leading" constant="20" id="3eX-bj-hiF"/>
                             <constraint firstItem="zBS-Wc-1Ed" firstAttribute="top" secondItem="OYt-aF-jZJ" secondAttribute="top" constant="40" id="C3j-9p-G50"/>
+                            <constraint firstItem="lQy-yL-bw4" firstAttribute="leading" secondItem="OYt-aF-jZJ" secondAttribute="leading" constant="20" id="C5Y-DC-bq9"/>
                             <constraint firstItem="OYt-aF-jZJ" firstAttribute="trailing" secondItem="zQS-sj-9zK" secondAttribute="trailing" constant="50" id="Fk5-Ph-gin"/>
-                            <constraint firstItem="lQy-yL-bw4" firstAttribute="top" secondItem="zBS-Wc-1Ed" secondAttribute="bottom" constant="20" id="Kkh-MK-7Zn"/>
+                            <constraint firstItem="lQy-yL-bw4" firstAttribute="top" secondItem="zBS-Wc-1Ed" secondAttribute="bottom" constant="20" id="OIn-NW-rPa"/>
                             <constraint firstItem="zBS-Wc-1Ed" firstAttribute="leading" secondItem="OYt-aF-jZJ" secondAttribute="leading" constant="20" id="OgP-aG-JZv"/>
+                            <constraint firstItem="OYt-aF-jZJ" firstAttribute="trailing" secondItem="lQy-yL-bw4" secondAttribute="trailing" constant="20" id="SCB-vy-KBN"/>
                             <constraint firstItem="OYt-aF-jZJ" firstAttribute="trailing" secondItem="zBS-Wc-1Ed" secondAttribute="trailing" constant="20" id="WRS-xe-d8P"/>
                             <constraint firstItem="zQS-sj-9zK" firstAttribute="leading" secondItem="OYt-aF-jZJ" secondAttribute="leading" constant="50" id="aFb-QM-2XK"/>
-                            <constraint firstItem="OYt-aF-jZJ" firstAttribute="trailing" secondItem="lQy-yL-bw4" secondAttribute="trailing" constant="20" id="dIC-Ko-jew"/>
+                            <constraint firstItem="zQS-sj-9zK" firstAttribute="top" secondItem="lQy-yL-bw4" secondAttribute="bottom" constant="20" id="d7B-8f-yKG"/>
                             <constraint firstItem="OYt-aF-jZJ" firstAttribute="bottom" secondItem="zQS-sj-9zK" secondAttribute="bottom" constant="30" id="yp9-Lw-e8a"/>
                         </constraints>
                     </view>
@@ -420,7 +415,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tIJ-I2-E7c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1895.625" y="-172.18309859154931"/>
+            <point key="canvasLocation" x="1926" y="-172"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Dzu-gX-upj">
