GreetingViewController added check before tap on continue button.

--- a/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
+++ b/CalorieCalculation/Storyboards/Base.lproj/Main.storyboard
@@ -390,6 +390,9 @@
                                 <rect key="frame" x="50" y="503.5" width="220" height="34.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Идем дальше "/>
+                                <connections>
+                                    <segue destination="JPT-HG-x0T" kind="presentation" modalPresentationStyle="fullScreen" id="Chh-rF-kfR"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OYt-aF-jZJ"/>
@@ -409,9 +412,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="FBU-uA-m1a"/>
                     <connections>
+                        <outlet property="continueButton" destination="zQS-sj-9zK" id="Zyh-0D-ASz"/>
                         <outlet property="imagesCollectionView" destination="lQy-yL-bw4" id="VBd-qq-kLW"/>
                         <outlet property="nicknameTextField" destination="74d-2H-no1" id="8jP-YE-2kt"/>
-                        <segue destination="JPT-HG-x0T" kind="presentation" identifier="parameters" modalPresentationStyle="fullScreen" id="LV0-WY-hY1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tIJ-I2-E7c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
